--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -3,10 +3,10 @@
 @import "w3.scss";
 
 body {
-  background-color: #fff;
+  background-color: #131823;
   padding: 50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #727272;
+  color: #f7f7f7;
   font-weight: 400;
 }
 
@@ -16,7 +16,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #222;
+  color: #fff;
   margin: 0 0 20px;
 }
 
@@ -40,14 +40,14 @@ h1 {
 }
 
 h2 {
-  color: #393939;
+  color: #ffffff;
 }
 
 h3,
 h4,
 h5,
 h6 {
-  color: #494949;
+  color: #ffffff;
 }
 
 a {
