--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -253,7 +253,7 @@ footer {
 }
 
 .tools-element {
-  border-left: aqua;
+  border-left: #ffffff;
   border-left-style: solid;
   padding-left: 10px;
   padding-right: 10px;
