--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -212,7 +212,7 @@ screen and (max-width: 992px) {
 }
 
 strong {
-  color: #222;
+  color: #fff;
   font-weight: 700;
 }
 
@@ -224,7 +224,7 @@ strong {
 #git-wiki-sidebar .git-wiki-downloads a strong {
   font-size: 14px;
   display: block;
-  color: #222;
+  color: #fff;
 }
 
 .git-wiki-page {
