--- a/_includes/modme/sidebar.html
+++ b/_includes/modme/sidebar.html
@@ -2,8 +2,11 @@ Menu:
 
 <ul>
   <li><a href="{{ '/' | relative_url }}">Home</a></li>
-  <li><a href="{{ '/wiki/examples.html' | relative_url }}">Made with Git-Wiki</a>
-  <li><a href="{{ '/wiki/changelogs.html' | relative_url }}">Changelogs</a>
-  <li><a href="{{ '/wiki/customize.html' | relative_url }}">Customize</a>
-  <li><a href="{{ '/wiki/press.html' | relative_url }}">Press & Contacts</a>
+  <li><a href="https://modme.co">Modme Forums</a>
+</ul>
+
+Wiki:
+
+<ul>
+    <li><a href="{{ '/wiki/changelogs.html' | relative_url }}">Changelogs</a>
 </ul>
