--- a/_includes/modme/sidebar.html
+++ b/_includes/modme/sidebar.html
@@ -2,11 +2,26 @@ Menu:
 
 <ul>
   <li><a href="{{ '/' | relative_url }}">Home</a></li>
-  <li><a href="https://modme.co">Modme Forums</a>
+  <li><a href="https://modme.co">Modme Forums</a></li>
 </ul>
 
 Wiki:
 
 <ul>
-    <li><a href="{{ '/wiki/changelogs.html' | relative_url }}">Changelogs</a>
+  <li><a href="{{ '/wiki/Applications.html' | relative_url }}">Applications</a></li>
+  <li><a href="{{ '/wiki/Forum.html' | relative_url }}">Forum</a></li>
+  <li><a href="{{ '/wiki/Game-Support-_-Black-Ops-1.html' | relative_url }}">Game Support | Black Ops 1</a></li>
+  <li>
+    <a href="{{ '/wiki/Game-Support-_-Black-Ops-3.html' | relative_url }}">Game Support | Black Ops 3</a>
+    <ul>
+      <li><a href="{{ '/wiki/black_ops_3/Basics.html' | relative_url }}">Basics</a></li>
+      <li><a href="{{ '/wiki/black_ops_3/In-depth-Guides.html' | relative_url }}">In-depth Guides</a></li>
+      <li><a href="{{ '/wiki/black_ops_3/Intermediate.html' | relative_url }}">Intermediate</a></li>
+      <li><a href="{{ '/wiki/black_ops_3/Lua-(LUI).html' | relative_url }}">Lua (LUI)</a></li>
+      <li><a href="{{ '/wiki/black_ops_3/Modding-Info.html' | relative_url }}">Modding Info</a></li>
+    </ul>
+  </li>
+  <li><a href="{{ '/wiki/Game-Support-_-World-at-War.html' | relative_url }}">Game Support | World at War</a></li>
+  <li><a href="{{ '/wiki/Models-and-Animation.html' | relative_url }}">Models and Animation</a></li>
+  <li><a href="{{ '/wiki/changelogs.html' | relative_url }}">Changelogs</a></li>
 </ul>
