Style tweaks, fixed page listing for testing page...

--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -97,6 +97,12 @@ pre {
   overflow-x: auto;
 }
 
+code {
+    background-color: white;
+    padding: 3px;
+    border-radius: 3px;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
