--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -76,7 +76,7 @@ a:hover small {
 }
 
 blockquote {
-  border-left: 1px solid #e5e5e5;
+  border-left: 3px solid #1b7db9;
   margin: 0;
   padding: 0 0 0 20px;
   font-style: italic;
