More basic info

--- a/_includes/modme/sidebar.html
+++ b/_includes/modme/sidebar.html
@@ -10,9 +10,9 @@ Wiki:
 <ul>
   <li><a href="{{ '/wiki/Applications.html' | relative_url }}">Applications</a></li>
   <li><a href="{{ '/wiki/Forum.html' | relative_url }}">Forum</a></li>
-  <li><a href="{{ '/wiki/Game-Support-_-Black-Ops-1.html' | relative_url }}">Game Support | Black Ops 1</a></li>
+  <li><a href="{{ '/wiki/Game-Support-_-Black-Ops-1.html' | relative_url }}">Game Modding | Black Ops 1</a></li>
   <li>
-    <a href="{{ '/wiki/Game-Support-_-Black-Ops-3.html' | relative_url }}">Game Support | Black Ops 3</a>
+    <a href="{{ '/wiki/Game-Support-_-Black-Ops-3.html' | relative_url }}">Game Modding | Black Ops 3</a>
     <ul>
       <li><a href="{{ '/wiki/black_ops_3/Basics.html' | relative_url }}">Basics</a></li>
       <li><a href="{{ '/wiki/black_ops_3/In-depth-Guides.html' | relative_url }}">In-depth Guides</a></li>
@@ -21,7 +21,6 @@ Wiki:
       <li><a href="{{ '/wiki/black_ops_3/Modding-Info.html' | relative_url }}">Modding Info</a></li>
     </ul>
   </li>
-  <li><a href="{{ '/wiki/Game-Support-_-World-at-War.html' | relative_url }}">Game Support | World at War</a></li>
+  <li><a href="{{ '/wiki/Game-Support-_-World-at-War.html' | relative_url }}">Game Modding | World at War</a></li>
   <li><a href="{{ '/wiki/Models-and-Animation.html' | relative_url }}">Models and Animation</a></li>
-  <li><a href="{{ '/wiki/changelogs.html' | relative_url }}">Changelogs</a></li>
 </ul>
