--- a/_includes/git-wiki/components/copyrights/copyrights.html
+++ b/_includes/git-wiki/components/copyrights/copyrights.html
@@ -1,3 +1,1 @@
-<div class="git-wiki-copyrights">
-    <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-</div>
+<div class="git-wiki-copyrights"></div>
