--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -133,6 +133,27 @@ img {
   background-color: inherit !important;
 }
 
+.git-wiki-search-js {
+  padding: 6px 0;
+}
+
+#search-input {
+  background-color: #10141d;
+  border-radius: 4px;
+  border: 1px solid #080a0e;
+  color: white;
+}
+
+#search-input:focus {
+  outline: none;
+  border-color: #1b7db9;
+  box-shadow: 0 0 1px #1b7db9;
+}
+
+#search-input ::placeholder {
+  color: #dbd9d9;
+}
+
 #git-wiki-mobile-header {
   position: fixed;
   top: 0;
