--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -143,6 +143,8 @@ img {
   border: 1px solid #080a0e;
   color: white;
   padding: 2px 4px;
+  width: 100%;
+  max-width: 280px;
 }
 
 #search-input:focus {
