--- a/_includes/git-wiki/components/logo/logo.html
+++ b/_includes/git-wiki/components/logo/logo.html
@@ -1,5 +1,5 @@
 <div class="git-wiki-main-logo">
-    <a href="{{ '/' | relative_url }}"><img src="{{ site.logo_url }}">
+    <a href="{{ '/' | relative_url }}"><img src="{{ '/assets/images/logo_scale.svg' | relative_url }}">
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
     </a>
     <p>{{ site.description | default: site.github.project_tagline }}</p>
