--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -91,7 +91,7 @@ pre {
 
 pre {
   padding: 8px 15px;
-  background: #0b0e15;
+  background: #1b1b1b;
   border-radius: 5px;
   box-shadow: 0 0 1px #1b7db9;
   border: 1px solid #1b7db9;
@@ -105,7 +105,7 @@ code {
 }
 
 pre code {
-  background-color: #0b0e15;
+  background-color: #1b1b1b;
   color: #d8d8d8;
   padding: initial;
 }
@@ -145,7 +145,7 @@ img {
 }
 
 #search-input {
-  background-color: #10141d;
+  background-color: #292828;
   border-radius: 4px;
   border: 1px solid #080a0e;
   color: white;
