--- a/_includes/modme/sidebar.html
+++ b/_includes/modme/sidebar.html
@@ -2,7 +2,7 @@ Menu:
 
 <ul>
   <li><a href="{{ '/' | relative_url }}">Home</a></li>
-  <li><a href="https://modme.co">Modme Forums</a></li>
+  <li><a href="https://forum.modme.co">Modme Forums</a></li>
 </ul>
 
 Wiki:
