Tweak mobile styles

--- a/_includes/git-wiki/sections/content/body.html
+++ b/_includes/git-wiki/sections/content/body.html
@@ -1,4 +1,11 @@
 <body>
+<div class=" w3-xlarge w3-hide-large" id="git-wiki-mobile-header">
+  <button class="w3-button w3-teal" onclick="sidebar_toggle()">&#9776;</button>
+  <a href="{{ '/' | relative_url }}">
+    <img src="{{ '/assets/images/logo_scale.svg' | relative_url }}" width="20px">
+    {{ site.title }}
+  </a>
+</div>
     {% include git-wiki/sections/content/wrapper.html %}
 
     {% include git-wiki/sections/tail/tail.html %}
