--- a/_includes/git-wiki/sections/head/meta.html
+++ b/_includes/git-wiki/sections/head/meta.html
@@ -6,6 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width">
 
+<meta name="og:image" content="https://wiki.modme.co/assets/images/logo_fav.png">
+
 {% seo %}
 
 {% if site.inc_after_meta %}
