--- a/_includes/git-wiki/sections/head/meta.html
+++ b/_includes/git-wiki/sections/head/meta.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width">
 
 <meta name="og:image" content="https://wiki.modme.co/assets/images/logo_fav.png">
+<meta name="twitter:description" content="{{page.excerpt}}">
 
 {% seo %}
 
