Update legion, add old wraith tool links, remove forum, add discord

--- a/_includes/modme/sidebar.html
+++ b/_includes/modme/sidebar.html
@@ -2,14 +2,13 @@ Menu:
 
 <ul>
   <li><a href="{{ '/' | relative_url }}">Home</a></li>
-  <li><a href="https://forum.modme.co">Modme Forums</a></li>
+  <li><a href="https://discord.com/invite/Gf2hPWcUFt">Discord</a></li>
 </ul>
 
 Wiki:
 
 <ul>
   <li><a href="{{ '/wiki/Applications.html' | relative_url }}">Applications</a></li>
-  <li><a href="{{ '/wiki/Forum.html' | relative_url }}">Forum</a></li>
   <li><a href="{{ '/wiki/Game-Support-_-Black-Ops-1.html' | relative_url }}">Game Modding | Black Ops 1</a></li>
   <li>
     <a href="{{ '/wiki/Game-Support-_-Black-Ops-3.html' | relative_url }}">Game Modding | Black Ops 3</a>
