--- a/_includes/modme/sidebar.html
+++ b/_includes/modme/sidebar.html
@@ -8,7 +8,7 @@ Menu:
 Wiki:
 
 <ul>
-  <li><a href="{{ '/wiki/Applications.html' | relative_url }}">Applications</a></li>
+  <li><a href="{{ '/wiki/Applications.html' | relative_url }}">Tools &amp; Applications</a></li>
   <li><a href="{{ '/wiki/Game-Support-_-Black-Ops-1.html' | relative_url }}">Game Modding | Black Ops 1</a></li>
   <li>
     <a href="{{ '/wiki/Game-Support-_-Black-Ops-3.html' | relative_url }}">Game Modding | Black Ops 3</a>
