--- a/_includes/modme/sidebar.html
+++ b/_includes/modme/sidebar.html
@@ -3,6 +3,7 @@ Menu:
 <ul>
   <li><a href="{{ '/' | relative_url }}">Home</a></li>
   <li><a href="https://discord.com/invite/Gf2hPWcUFt">Discord</a></li>
+  <li><a href="{{ '/wiki/Applications.html' | relative_url }}">Tools &amp; Applications</a></li>
 </ul>
 
 Wiki:
