--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -75,7 +75,7 @@ a:hover small {
   margin: 0 auto;
 }
 
-blockquote {
+blockquote, .blockquote {
   border-left: 3px solid #1b7db9;
   margin: 0;
   padding: 0 0 0 14px;
