--- a/_includes/modme/sidebar.html
+++ b/_includes/modme/sidebar.html
@@ -2,15 +2,13 @@ Menu:
 
 <ul>
   <li><a href="{{ '/' | relative_url }}">Home</a></li>
-  <li><a href="https://discord.com/invite/Gf2hPWcUFt">Discord</a></li>
-  <li><a href="{{ '/wiki/Applications.html' | relative_url }}">Tools</a></li>
+  <li><a href="https://dtzxporter.com/tools">Tools</a></li>
   <li><a href="https://forum.modme.co">Forum Archive</a></li>
 </ul>
 
 Wiki:
 
 <ul>
-  <li><a href="{{ '/wiki/Applications.html' | relative_url }}">Tools &amp; Applications</a></li>
   <li><a href="{{ '/wiki/Game-Support-_-Black-Ops-1.html' | relative_url }}">Game Modding | Black Ops 1</a></li>
   <li>
     <a href="{{ '/wiki/Game-Support-_-Black-Ops-3.html' | relative_url }}">Game Modding | Black Ops 3</a>
